voice echo and video stretch fix

--- a/client/src/components/Video/style.module.css
+++ b/client/src/components/Video/style.module.css
@@ -3,7 +3,7 @@
     z-index: 0;
     height:100%;
     width: 100%;
-    object-fit: fill;
+    object-fit: cover;
     margin:auto;
 }
 .peerVideoContainer{
